crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__complex_literals-2.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
.{ a: 1, b: 2 }

EXPRESSION:
 { a: 1, b: 2 } @ (L1, C0:1)
