crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__complex_literals-3.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
.{ a: 1, b: [2, 3] }

EXPRESSION:
 { a: 1, b: [2, 3] } @ (L1, C0:1)
