crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__complex_literals.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
[1, 2, 3]

EXPRESSION:
[1, 2, 3] @ (L1, C0:1)
