crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__lambda_expr-2.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
\(x, y) -> x + y

EXPRESSION:
fn(x, y) -> ? { (x + y) } @ (L1, C0:1)
