crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__lambda_expr.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
\(x) -> x + 1

EXPRESSION:
fn(x) -> ? { (x + 1) } @ (L1, C0:1)
