crates/azalea-core/src/parse/snapshots/azalea_core__parse__tests__let_stmt.snap
---
source: crates/azalea-core/src/parse/tests.rs
expression: output
---
SOURCE:
let x = 42

AST:
Ok(
    Span {
        target: Let {
            name: "x",
            ty: Unresolved,
            value: Span {
                target: Literal(
                    Int(
                        42,
                    ),
                ),
                loc: SourceLoc {
                    line: 1,
                    start: 8,
                    end: 10,
                },
            },
        },
        loc: SourceLoc {
            line: 1,
            start: 0,
            end: 3,
        },
    },
)
